--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
-venv/
-ENV/
-build/
+**/env/
+**/venv/
+**/ENV/
+**/build/
 develop-eggs/
 dist/
 downloads/
