--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,17 +2,16 @@
 name = "backend-app"
 version = "0.1.0"
 description = "Loan Orchestrator Backend Application"
-authors = ["Your Name <you@example.com>"]
+authors = ["Tudor Avram <a96tudor@gmail.com>"]
 readme = "README.md"
-packages = [{include = "backend_app", from = "src"}]
+package-mode = false
+packages = [{include = "backend_app", from = "src"}, ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-Flask = "3.0.0"
-gunicorn = "21.2.0"
-SQLAlchemy = "2.0.23"
-psycopg2-binary = "2.9.9"
-python-dotenv = "1.0.0"
+python = ">=3.12,<4.0"
+flask = "^3.1.1"
+gunicorn = "^23.0.0"
+pyutils = {git = "https://github.com/a96tudor/pyutils.git", rev = "main"}
 
 [tool.poetry.group.dev.dependencies]
 
