Define first resource classes

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ python = ">=3.12,<4.0"
 flask = "^3.1.1"
 gunicorn = "^23.0.0"
 pyutils = {git = "https://github.com/a96tudor/pyutils.git", rev = "main"}
+pycountry = "^24.6.1"
 
 [tool.poetry.group.dev.dependencies]
 
