--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ pyutils = {git = "https://github.com/a96tudor/pyutils.git", rev = "main"}
 pycountry = "^24.6.1"
 
 [tool.poetry.group.dev.dependencies]
+tox = "^4.32.0"
 
 [build-system]
 requires = ["poetry-core"]
