--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ flask = "^3.1.1"
 gunicorn = "^23.0.0"
 pyutils = {git = "https://github.com/a96tudor/pyutils.git", rev = "main"}
 pycountry = "^24.6.1"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 tox = "^4.32.0"
