--- a/backend/tox.ini
+++ b/backend/tox.ini
@@ -15,9 +15,9 @@ deps =
     isort
 
 commands =
-    flake8 src
-    isort --check-only src
-    black --check src
+    flake8 orchestrator
+    isort --check-only orchestrator
+    black --check orchestrator
 
 
 [testenv:fix]
@@ -29,8 +29,8 @@ deps =
     isort
 
 commands =
-    black src
-    isort src
+    black orchestrator
+    isort orchestrator
 
 
 [flake8]
