Create basic API handlers

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,4 @@
-# API Configuration
-# This variable is used by the Vite frontend application
-# to configure the base URL for API requests.
-#
-# When running in Docker, this should point to the backend service.
-# When running locally, this should point to http://localhost:5000
-#
-# Note: Vite requires the VITE_ prefix for environment variables
-# to be exposed to the client-side code.
-
-VITE_API_BASE_URL=
+# Backend API Base URL
+# This should point to your backend API server
+# Example: http://localhost:5000/api/v1
+VITE_API_URL=http://localhost:5000/api/v1
