--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ pyutils = {git = "https://github.com/a96tudor/pyutils.git", rev = "main"}
 pycountry = "^24.6.1"
 pyyaml = "^6.0.1"
 alembic = "^1.17.2"
+openai = "^2.8.0"
 
 [tool.poetry.group.dev.dependencies]
 tox = "^4.32.0"
