--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -31,8 +31,11 @@ services:
       POSTGRES_DB: loan_orchestrator
       POSTGRES_HOST: db
       POSTGRES_PORT: 5432
+      FLASK_PORT: 5001
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/loan_orchestrator
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
     ports:
-      - "5000:5000"
+      - "5001:5001"
     depends_on:
       db:
         condition: service_healthy
@@ -43,6 +46,8 @@ services:
     build:
       context: ../frontend
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: http://localhost:5001/api/v1
     container_name: loan-orchestrator-frontend
     ports:
       - "80:80"
