--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "yaml": "^2.8.1"
   }
 }
