--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
   backend:
     build:
-      context: ../backend
+      context: backend
       dockerfile: Dockerfile
     container_name: loan-orchestrator-backend
     environment:
@@ -44,7 +44,7 @@ services:
 
   frontend:
     build:
-      context: ../frontend
+      context: frontend
       dockerfile: Dockerfile
       args:
         VITE_API_URL: http://localhost:5001/api/v1
